--- a/app/index.html
+++ b/app/index.html
@@ -73,13 +73,27 @@
 </form>
 <form class="check" id="contact" name="contact" action="#" method="post" > 
 <div class="checkbox">
-	<label for="r1"> <span></span>Предложения от </label> <br>
-		<input type="radio" name="#" value="Сoбственник" checked="checked" id="r1"  class="radio"/>  <small> Собственника</small><br />
-		<input type="radio" name="#" value="Агенство" id="r1" class="radio"/> <small>Агенство</small><br />
+<p> Предложения от</p>
+	<label>
+    <input class="radio" type="radio" name="radio-test">
+    <span class="radio-custom"></span>
+    <span class="label">собственника </span>
+</label> <br>
+<label>
+    <input class="radio" type="radio" name="radio-test">
+    <span class="radio-custom"></span>
+    <span class="label">агенства</span>
+</label>
+		 
+
 	</div>
 <div class="checkbox">
-	<label for="c1">Предложения </label> <br>
-		<input type="checkbox" name="#" value="C фото" checked="checked" id="c1" />  <small> С фото</small><br />
+<p>Предложения </p>
+	<label>
+    <input class="checkbox_2" type="checkbox" name="checkbox-test">
+    <span class="checkbox-custom"></span>
+    <span class="label"> С фото</span>
+</label>
 	</div>
 	</form>
 	<div class="btn">
